# cecie

./: .gitignore  AppPkg.Makefile  CMakeLists.txt  CMakeLists.txt.template  README.md  build.sh  gen_cmake.py  new_cmd.py
example-clients/: cmd_helper.py  connect.py  delete.py  delete_file.py  delete_save.py  download_file.py  dump.py  invalid_cmd.py  listfiles.py  modify.py  mount.py  mount_save.py  ping.py  reserve.py  reset.py  touch_save.py  unmount.py  unmount_save.py  upload_file.py
include/: clienthandler.hpp  cmd_common.hpp  cmd_handler.hpp  cmd_list.hpp  cmd_server.hpp  common.hpp  constants.hpp  filesystem.hpp  log.hpp  main.hpp  network.hpp  pong.hpp  server.hpp  server_common.hpp  sessions.hpp
include/_types/: filesystem.hpp
include/commands/: base.hpp  mainset.hpp  modifyset.hpp  reservesavecontainer.hpp  reserveset.hpp  set.hpp  system.hpp
include/commands/events/: basesystem.hpp  callback.hpp  event.hpp  names.hpp  phases.hpp
include/commands/savecontainer/: delete.hpp  download.hpp  downloadfile.hpp  finish.hpp  listfiles.hpp  modify.hpp  mount.hpp  (+4 more)
scripts/: get_objects.py  get_sources.py
source/: clienthandler.cpp  cmd_common.cpp  cmd_handler.cpp  cmd_list.cpp  cmd_server.cpp  common.cpp  filesystem.cpp  log.cpp  main.cpp  network.cpp  pong.cpp  server.cpp  server_common.cpp  sessions.cpp
source/_cmds/: delete_file.cpp  delete_save.cpp  download_file.cpp  mount_save.cpp  touch_save.cpp  unmount_save.cpp  upload_file.cpp
source/commands/: base.cpp  mainset.cpp  modifyset.cpp  reservesavecontainer.cpp  reserveset.cpp  set.cpp  system.cpp
(+26 files in other folders)
